force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>One record per ticket. OWD=Private. Contains QR-ready ticket code and check-in status.</description>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>