force-app/main/default/objects/Attendee__c/fields/Attribution_Source__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Source__c</fullName>
    <description>Editable by Marketing Lead only — enforced by Validation Rule</description>
    <label>Attribution Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Unattributed</fullName>
                <default>true</default>
                <label>Unattributed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>