force-app/main/default/objects/Attendee__c/fields/Checkin_Status__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Status__c</fullName>
    <label>Check-In Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked In</fullName>
                <default>true</default>
                <label>Not Checked In</label>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>