force-app/main/default/objects/Attendee__c/fields/Checkin_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Time__c</fullName>
    <description>Set by Flow when status changes to Checked In</description>
    <label>Check-In Timestamp</label>
    <type>DateTime</type>
</CustomField>