force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Used for check-in lookup</description>
    <label>Attendee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>