force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Attendee Phone</label>
    <type>Phone</type>
</CustomField>