force-app/main/default/objects/Attendee__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <description>Snapshot of tier price at time of purchase. Never changes retroactively.</description>
    <label>Purchase Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>