force-app/main/default/objects/Attendee__c/fields/Ticket_Code__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Code__c</fullName>
    <description>UUID v4 format. Globally unique. QR-ready. Generated by Apex on purchase.</description>
    <label>Unique Ticket Code</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>