force-app/main/default/objects/Attendee__c/fields/Ticket_Tier__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Tier__c</fullName>
    <label>Ticket Tier</label>
    <referenceTo>Ticket_Tier__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>