force-app/main/default/objects/Attendee__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Transaction</label>
    <referenceTo>Purchase_Transaction__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>